Updates-clear-fixes

--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -52,8 +52,8 @@
     <div class="container-fluid p-1">
         <div class="row no-gutters popup-gallery">
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="Content/img/portfolio/fullsize/1.jpg">
-                    <img class="img-fluid" src="Content/img/portfolio/thumbnails/1.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/1.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/1.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -67,8 +67,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="Content/img/portfolio/fullsize/2.jpg">
-                    <img class="img-fluid" src="Content/img/portfolio/thumbnails/2.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/2.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/2.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -82,8 +82,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="Content/img/portfolio/fullsize/3.jpg">
-                    <img class="img-fluid" src="Content/img/portfolio/thumbnails/3.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/3.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/3.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -97,8 +97,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="Content/img/portfolio/fullsize/4.jpg">
-                    <img class="img-fluid" src="Content/img/portfolio/thumbnails/4.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/4.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/4.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -112,8 +112,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="Content/img/portfolio/fullsize/5.jpg">
-                    <img class="img-fluid" src="Content/img/portfolio/thumbnails/5.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/5.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/5.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -127,8 +127,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="Content/img/portfolio/fullsize/6.jpg">
-                    <img class="img-fluid" src="Content/img/portfolio/thumbnails/6.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/6.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/6.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -186,7 +186,7 @@
         </div>
     </div>
 </section>
-<section class="bg-yellow text-red"  id="portfolio">
+<section class="bg-yellow text-red" id="portfolio">
     <div class="container text-center">
         <h2 class="mb-4">Spanish Group Classes : Coming Classes</h2>
         <hr class="my-4">
@@ -203,12 +203,56 @@
         </table>
     </div>
 </section>
+<section class="bg-primary" id="place">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-yellow">Our place</h2>
+                <hr class="light">
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid p-1">
+        <div class="row col-lg-8 mx-auto">
+            <p class="text-yellow mb-4">Our academy del esponol is located at The horizon, community mall only 2-minute walk from Ekamai station. You can find our lively class with green environment on 2nd floor.</p>
+            <p class="text-yellow mb-4">For Private class, it can be done at your place or appointed place outside the academy.</p>
+            @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
+        </div>
+        <div class="row no-gutters popup-gallery">
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/1.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/1.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/2.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/2.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/3.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/3.jpg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 <section id="contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Contact Us</h2>
                 <hr class="my-4">
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid p-1">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <a class="portfolio-box" href="~/Content/img/Institute.png">
+                    <img class="img-fluid img-responsive center-block" src="~/Content/img/Institute.png" alt="">
+                </a>
+                <br />
             </div>
         </div>
         <div class="row">
