--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -1,20 +1,30 @@
 ﻿<!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Academy del Espanol</a>
+        <img style="height:3em;padding-right:2em" src="~/Content/img/logo_academyDelEspanol_minified.png" />
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Academy del Español</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    <a class="nav-link js-scroll-trigger" href="#about">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+                    <a class="nav-link js-scroll-trigger" href="#services">Levels</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#portfolio">Classes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#place">Place</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#student">Student</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#instructor">Instructor</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -27,24 +37,24 @@
     <div class="container my-auto">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h1 class="text-uppercase text-red">
-                    <strong>El amor todo lo puede.</strong>
-                </h1>
+                <h3 class="text-uppercase text-red">
+                    <strong>To be a world citizen nowadays, we have to keep pushing our skill beyond the boundary.</strong>
+                </h3>
                 <hr>
             </div>
-            <div class="col-lg-8 mx-auto div-fade">
-                <p class="text-yellow mb-4">To be a world citizen nowadays, we have to keep pushing our skill beyond the boundary. Academy del Espanol aims to be the center where participants can immerse themselves in the language and culture as part of the learning process.</p>
-                <p class="text-yellow mb-4"> With lively and professional vibe, our Madrid-born founder has passionately distributed the love of teaching with students in Thailand for more than 4 years.</p>
+            <div class="col-lg-8 mx-auto div-fade text-yellow">
+                <p class="mb-4">Academy del Espanol aims to be the center where participants can immerse themselves in the language and culture as part of the learning process.</p>
+                <p class="mb-4">With lively and professional vibe, our Madrid-born founder has passionately distributed the love of teaching with students in Thailand for more than 4 years.</p>
                 @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
             </div>
         </div>
     </div>
 </header>
-<section class="bg-primary" id="about">
+<section class="bg-primary text-yellow" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-yellow">Our Service</h2>
+                <h2 class="section-heading">Our Service</h2>
                 <hr class="light">
             </div>
         </div>
@@ -117,7 +127,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Tutor classes (D.E.L.E., )
+                                E Preparation (D.E.L.E. )
                             </div>
                             <div class="project-name">
                                 120$ per hour
@@ -190,34 +200,92 @@
     <div class="container text-center">
         <h2 class="mb-4">Spanish Group Classes : Coming Classes</h2>
         <hr class="my-4">
-        <table id="class-table" class="table table-responsive-md table-hover" cellspacing="0" cellpadding="0">
-            <thead>
+        <table id="class-table" class="table table-hover table-sm" cellspacing="0" cellpadding="0" style="border-color:black">
+            <thead class="bg-primary text-yellow">
                 <tr>
-                    <th>Date</th>
-                    <th>Day</th>
-                    <th>Class</th>
-                    <th>Time</th>
-                    <th>Total hours</th>
+                    <th class="border-dark">Date</th>
+                    <th class="border-dark">Day</th>
+                    <th class="border-dark">Class</th>
+                    <th class="border-dark">Time</th>
+                    <th class="border-dark">Total hours</th>
                 </tr>
             </thead>
         </table>
     </div>
 </section>
-<section class="bg-primary" id="place">
+<section class="bg-primary text-yellow" id="place">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-yellow">Our place</h2>
+                <h2 class="section-heading">Our place</h2>
                 <hr class="light">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+                <p class="mb-4">Our academy del esponol is located at The horizon, community mall only 2-minute walk from Ekamai station. You can find our lively class with green environment on 2nd floor.</p>
+                <p class="mb-4">For Private class, it can be done at your place or appointed place outside the academy.</p>
             </div>
         </div>
     </div>
     <div class="container-fluid p-1">
-        <div class="row col-lg-8 mx-auto">
-            <p class="text-yellow mb-4">Our academy del esponol is located at The horizon, community mall only 2-minute walk from Ekamai station. You can find our lively class with green environment on 2nd floor.</p>
-            <p class="text-yellow mb-4">For Private class, it can be done at your place or appointed place outside the academy.</p>
-            @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
+        <div class="row no-gutters popup-gallery">
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/4.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/4.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                From internatonal organisations
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/5.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/5.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                From famous international school
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/6.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/6.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                From around the world
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
+    </div>
+</section>
+<section id="student">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Our students</h2>
+                <hr class="my-4">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <p class="section-heading">Our previous and on-going students.</p>
+            </div>
+            <br />
+        </div>
+    </div>
+    <div class="container-fluid p-1">
+
         <div class="row no-gutters popup-gallery">
             <div class="col-lg-4 col-sm-6">
                 <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/1.jpg">
@@ -232,6 +300,63 @@
             <div class="col-lg-4 col-sm-6">
                 <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/3.jpg">
                     <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/3.jpg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="bg-yellow text-red" id="instructor">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="mb-4">Our instructors</h2>
+                <hr class="my-4">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-10 mx-auto">
+                <p class="mb-4 text-center">only native Spanish speakers. They are carefully selected based on their academic qualification, experience and personality. Our language instructors are experienced and certified to teach Spanish a s a foreign language.</p>
+                <p class="mb-4 text-center">They will guide you though the learning objectives effectively through various activities to maximize your potential. Our language instructors are not only highly qualified, but stimulating and dynamic.</p>
+                @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid p-1">
+        <div class="row no-gutters popup-gallery">
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/4.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/4.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Teacher David (Madrid, Spain)
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/5.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/5.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Teacher Ana ( Galicia, Spain)
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/6.jpg">
+                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/6.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Teacher Carlos ( Mexico)
+                            </div>
+                        </div>
+                    </div>
                 </a>
             </div>
         </div>
